# android-cplusplus-native-reference

./: .gitmodules  Anotacao.rtf  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mobfiq/auth/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AuthHandler.h  CMakeLists.txt  auth-libs.cpp  auth.cpp  auth.h  authchallenge.cpp  authchallenge.h  authchallenge_bkp.cpp  authhandler.cpp  authhandler.h  handle.h  hello-libs.cpp  native-lib.cpp  sha256.h  teste_simples.h
app/src/main/java/com/example/autenticacao/: MainActivity.kt
app/src/main/java/com/mobfiq/auth/: AuthHandler.java  MainActivity.kt
app/src/test/java/com/mobfiq/auth/: ExampleUnitTest.kt
distribution/gmath/include/: AuthChallenge.h
distribution/gmath/lib/android/__MACOSX/: ._android
gradle/wrapper/: gradle-wrapper.properties
importlibraryauth/: build.gradle
importlibraryauth/src/androidTest/java/com/example/importlibraryauth/: ExampleInstrumentedTest.kt
importlibraryauth/src/main/: AndroidManifest.xml
importlibraryauth/src/main/java/com/example/importlibraryauth/: MainActivity.kt
importlibraryauth/src/main/res/values/: strings.xml
importlibraryauth/src/test/java/com/example/importlibraryauth/: ExampleUnitTest.kt
